--- a/assets/css/modules/_left-nav.scss
+++ b/assets/css/modules/_left-nav.scss
@@ -164,6 +164,42 @@ ul.aside {
   }
 }
 
+@media (max-width: 768px) {
+  ::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+  }
+  ::-webkit-scrollbar-button {
+    width: 0px;
+    height: 0px;
+  }
+  ::-webkit-scrollbar-thumb {
+    background: #fff;
+    border: 0px none $border-grey;
+    border-radius: 100px;
+  }
+  ::-webkit-scrollbar-thumb:hover {
+    background: #c9c9c9;
+  }
+  ::-webkit-scrollbar-thumb:active {
+    background: #606060;
+  }
+  ::-webkit-scrollbar-track {
+    background: white;
+    border: 0px none #ff5a28;
+    border-radius: 100px;
+  }
+  ::-webkit-scrollbar-track:hover {
+    background: #ffffff;
+  }
+  ::-webkit-scrollbar-track:active {
+    background: #ededed;
+  }
+  ::-webkit-scrollbar-corner {
+    background: transparent;
+  } 
+}
+
 
 li.action-bar{
   background: white;
